--- a/app/src/main/res/layout/activity_thank_you.xml
+++ b/app/src/main/res/layout/activity_thank_you.xml
@@ -49,11 +49,12 @@
         android:layout_gravity="center"
         android:text="Вернуться в главное меню"
         android:textSize="20sp"
-        android:background="@android:color/transparent"
+        android:background="@drawable/bttn"
         android:layout_width="match_parent"
         android:layout_margin="10dp"
-        android:layout_height="wrap_content"
-
+        android:layout_height="60dp"
+        android:textColor="@android:color/white"
+        android:textAllCaps="false"
         android:shadowDy="1"
         android:shadowDx="1"
         android:shadowRadius="1"
