--- a/app/src/main/res/layout/activity_choice.xml
+++ b/app/src/main/res/layout/activity_choice.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -10,50 +11,56 @@
     tools:context="com.northernwinds.northernwinds.ChoiceActivity"
     android:background="@drawable/back"
     android:gravity="center"
-    android:orientation="vertical"
-    >
-
-    <Button
-        android:id="@+id/firstChoiceButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    android:orientation="vertical">
+    <LinearLayout
         android:gravity="center"
-        android:text="Загрузка..."
-
-        android:padding="10dp"
-        android:textAllCaps="false"
-        android:textSize="25sp"
-        android:background="@android:color/transparent"
-        android:textColor="#221401"
-
-        android:shadowDy="1"
-        android:shadowDx="1"
-        android:shadowRadius="1"
-        android:shadowColor="#221401"
-
-        android:textColorHighlight="@android:color/holo_blue_dark"
-        android:layout_margin="20dp"
-        />
-    <Button
-        android:id="@+id/secondChoiceButton"
+        android:layout_weight="80"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:gravity="center"
-        android:text=""
-        android:textAllCaps="false"
-        android:textSize="25sp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         android:background="@android:color/transparent"
-        android:textColor="#221401"
+        >
+        <Button
+            android:id="@+id/firstChoiceButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Загрузка..."
 
-        android:shadowDy="1"
-        android:shadowDx="1"
-        android:shadowRadius="1"
-        android:shadowColor="#221401"
+            android:textAllCaps="false"
+            android:textSize="25sp"
+            android:background="@drawable/bttn"
+            android:textColor="#ffffffff"
 
-        android:layout_margin="20dp"
-        android:textColorHighlight="@android:color/holo_blue_dark"
-        />
+            android:shadowDy="1"
+            android:shadowDx="1"
+            android:shadowRadius="1"
+            android:shadowColor="#221401"
+
+            android:textColorHighlight="@android:color/holo_blue_dark"
+            android:layout_margin="20dp"
+            />
+        <Button
+            android:id="@+id/secondChoiceButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text=""
+            android:textAllCaps="false"
+            android:textSize="25sp"
+            android:background="@android:color/transparent"
+            android:textColor="#ffffffff"
+
+            android:shadowDy="1"
+            android:shadowDx="1"
+            android:shadowRadius="1"
+            android:shadowColor="#221401"
+
+            android:layout_margin="20dp"
+            android:textColorHighlight="@android:color/holo_blue_dark"
+            />
+    </LinearLayout>
+
 
 
 
